--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -3,18 +3,18 @@ name: Build and Release Windows Executable
 on:
   push:
     branches:
-      - main # Цей робочий процес буде запускатись при кожному оновленні гілки 'main'
+      - main
 
 jobs:
   build:
-    runs-on: windows-latest # Використовуємо операційну систему Windows для компіляції
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
 
@@ -27,7 +27,7 @@ jobs:
       run: pyinstaller --onefile sad_app.py
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: sad-app-exe
         path: dist/sad_app.exe
